update with 4 changes

--- a/note/temp-name.html
+++ b/note/temp-name.html
@@ -4,9 +4,9 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <link rel="stylesheet" href="/static/style.css" />
-<title>임시로 쓰는 이름들 - Seorenn</title>
-<meta name="twitter:title" content="임시로 쓰는 이름들" />
-<meta name="og:title" content="임시로 쓰는 이름들" />
+<title>임시 이름 - Seorenn</title>
+<meta name="twitter:title" content="임시 이름" />
+<meta name="og:title" content="임시 이름" />
 <meta name="description" content="정말 임시로 아무렇게나 쓰는 이름을 정리하는 페이지" />
 <meta name="twitter:description" content="정말 임시로 아무렇게나 쓰는 이름을 정리하는 페이지" />
 <meta name="og:description" content="정말 임시로 아무렇게나 쓰는 이름을 정리하는 페이지" />
@@ -64,20 +64,25 @@
 </div>
 <section class="content">
 <header>
-<h1>임시로 쓰는 이름들</h1>
-<div class="title-date">2020년 5월 6일 수정</div>
+<h1>임시 이름</h1>
+<div class="title-date">2020년 5월 7일 수정</div>
 </header>
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org3acb680">Foobar 스타일</a></li>
+<li><a href="#orgc762b2e">Foobar 스타일</a></li>
+<li><a href="#org726ad10">i</a></li>
 </ul>
 </div>
 </div>
+<p>
+이름 짓기가 곤란하거나 대충 빠르게 지어야 할 때 쓰기 좋은 임시 이름을 몇 가지 모아보는 글이다.
+이 글을 쓰는 이의 특성(?) 상 주로 프로그래밍에 관련된 내용이라고 생각하자.
+</p>
 
-<div id="outline-container-org3acb680" class="outline-2">
-<h2 id="org3acb680">Foobar 스타일</h2>
-<div class="outline-text-2" id="text-org3acb680">
+<div id="outline-container-orgc762b2e" class="outline-2">
+<h2 id="orgc762b2e">Foobar 스타일</h2>
+<div class="outline-text-2" id="text-orgc762b2e">
 <p>
 영국이나 미국 등의 영어 권에서 자주 쓰이며
 foo - bar 로 시작하기 때문에 이를 붙여서 foobar 형태라고 부르는 것 같다.
@@ -104,6 +109,32 @@ foo - bar 로 시작하기 때문에 이를 붙여서 foobar 형태라고 부르
 <li>wubble</li>
 <li>flob</li>
 </ul>
+</div>
+</div>
+<div id="outline-container-org726ad10" class="outline-2">
+<h2 id="org726ad10">i</h2>
+<div class="outline-text-2" id="text-org726ad10">
+<p>
+프로그래밍에서 변수의 이름을 짓는 것은 상당히 중요한 일이나 특정 상황에서 우리는 예외적인 관습을 많이 만들어 왔다.
+그 중 대표적인 것이 바로 <code>i</code> 다.
+</p>
+<div class="org-src-container">
+<pre class="src src-c++"><span style="color: #51afef;">for</span> (<span style="color: #ECBE7B;">int</span> <span style="color: #dcaeea;">i</span>=<span style="color: #da8548; font-weight: bold;">0</span>; i &lt; x; i++) { ... }
+</pre>
+</div>
+<p>
+주로 루프에서 <code>i</code> 라는 변수 이름을 임시로 사용하는 경우가 많은데,
+index 용도이기 때문에 첫 글자를 약자로 쓰는 경우라고 봐야 한다.
+</p>
+
+<p>
+현재는 index를 <code>i</code> 라고 쓰는 케이스가 이제는 거의 당연하다고 여겨지는 지경까지 온 것 같다.
+그래서 <code>i</code> 만큼은 임시 이름에서 의미를 가지는 특수한 경우로 볼 수 있다.
+</p>
+
+<p>
+비슷하게 j, k 가 있겠지만 이 녀석들은 좀 다르다. 가급적 쓰지 말자.
+</p>
 </div>
 </div>
 <div class="mid-ad-container">
