--- a/index.html
+++ b/index.html
@@ -67,6 +67,13 @@
 <h1>❏ POST의 최신 글</h1>
 <div class="article-link">
 <div class="article-link-title-block">
+<h2><a class="article-link-title" href="/post/doom-emacs-vs-spacemacs.html">Doom Emacs vs Spacemacs</a></h2>
+<div class="article-link-date">
+2020년 5월 7일 작성</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
 <h2><a class="article-link-title" href="/post/what-choice-democracy-or-privacy-in-korean.html">한국인은 개인의 자유와 민주주의 중 무엇을 선택할까?</a></h2>
 <div class="article-link-date">
 2020년 5월 6일 작성</div>
@@ -126,13 +133,6 @@
 <h2><a class="article-link-title" href="/post/weird-github-page.html">왜 GitHub Pages의 일부 글이 나타나지 않았을까?</a></h2>
 <div class="article-link-date">
 2020년 4월 14일 작성</div>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/post/seorenn-publish.html">정적 사이트 생성을 위한 개인적인 욕망의 분출(?)</a></h2>
-<div class="article-link-date">
-2020년 4월 13일 작성</div>
 </div>
 </div>
 </div>
