update with 1 changes

--- a/note/coffee.html
+++ b/note/coffee.html
@@ -70,20 +70,20 @@
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#orgeb0a3ad">종류</a></li>
-<li><a href="#org0517a0d">카페인</a></li>
-<li><a href="#org02dc0be">특징</a>
+<li><a href="#org6a6c4bf">종류</a></li>
+<li><a href="#orgd24a344">카페인</a></li>
+<li><a href="#org2db8659">특징</a>
 <ul>
-<li><a href="#orgd5b080a">각성 효과</a></li>
-<li><a href="#orgc967899">이뇨작용</a></li>
-<li><a href="#orgc167bd9">소화기관 자극</a></li>
-<li><a href="#org83e9bad">심혈관 질환 유발 가능성</a></li>
-<li><a href="#org436524f">두통에 효과</a></li>
-<li><a href="#orgeb6248e">다이어트</a></li>
-<li><a href="#org0ffcf1b">칼슘 흡수 방해</a></li>
-<li><a href="#org2a6c679">중독 증상</a></li>
-<li><a href="#orgf590680">근감소증 예방</a></li>
-<li><a href="#orge1129e1">발암과 항암 작용</a></li>
+<li><a href="#org93c22f7">각성 효과</a></li>
+<li><a href="#orgf504509">이뇨작용</a></li>
+<li><a href="#orgf31d341">소화기관 자극</a></li>
+<li><a href="#org6dab973">심혈관 질환 유발 가능성</a></li>
+<li><a href="#org7f69236">두통에 효과</a></li>
+<li><a href="#orgb8eee15">다이어트</a></li>
+<li><a href="#org18854ac">칼슘 흡수 방해</a></li>
+<li><a href="#org45da8a1">중독 증상</a></li>
+<li><a href="#orgc0db3f7">근감소증 예방</a></li>
+<li><a href="#org90efc3f">발암과 항암 작용</a></li>
 </ul>
 </li>
 </ul>
@@ -96,109 +96,109 @@
 어차피 커피는 향을 즐기는 음료라 맛 자체는 크게 중요하지 않을지도 모른다.
 </p>
 
-<div id="outline-container-orgeb0a3ad" class="outline-2">
-<h2 id="orgeb0a3ad">종류</h2>
-<div class="outline-text-2" id="text-orgeb0a3ad">
+<div id="outline-container-org6a6c4bf" class="outline-2">
+<h2 id="org6a6c4bf">종류</h2>
+<div class="outline-text-2" id="text-org6a6c4bf">
 <p>
 글쓴이는 카페라떼 성애자라 다른 커피 따윈(?) 눈에 들어오지 않는다.
 </p>
 </div>
 </div>
-<div id="outline-container-org0517a0d" class="outline-2">
-<h2 id="org0517a0d">카페인</h2>
-<div class="outline-text-2" id="text-org0517a0d">
+<div id="outline-container-orgd24a344" class="outline-2">
+<h2 id="orgd24a344">카페인</h2>
+<div class="outline-text-2" id="text-orgd24a344">
 <p>
 커피의 주요 성분이다. 원래는 '독'으로 커피 나무가 해충으로 부터 자신을 보호하기 위해 축적하는 살충제다.
 다행히도 인간에게는 주로 각성 효과를 나타내며 '독' 이라는 분류의 의미가 거의 없는 편이다.
 </p>
 </div>
 </div>
-<div id="outline-container-org02dc0be" class="outline-2">
-<h2 id="org02dc0be">특징</h2>
-<div class="outline-text-2" id="text-org02dc0be">
+<div id="outline-container-org2db8659" class="outline-2">
+<h2 id="org2db8659">특징</h2>
+<div class="outline-text-2" id="text-org2db8659">
 <p>
 커피의 전반적인 효능이나 특징은 대부분 카페인에 의한 것으로 알려져 있다.
 이 글에서는 대충 뭉뚱그려서 어느 정도 검증된 내용만 정리해본다.
 </p>
 </div>
-<div id="outline-container-orgd5b080a" class="outline-3">
-<h3 id="orgd5b080a">각성 효과</h3>
-<div class="outline-text-3" id="text-orgd5b080a">
+<div id="outline-container-org93c22f7" class="outline-3">
+<h3 id="org93c22f7">각성 효과</h3>
+<div class="outline-text-3" id="text-org93c22f7">
 <p>
 중추신경을 흥분시켜서 잠이 잘 안 오게 하고 정도에 따라 집중력도 높여 준다고 알려져있다.
 </p>
 </div>
 </div>
-<div id="outline-container-orgc967899" class="outline-3">
-<h3 id="orgc967899">이뇨작용</h3>
-<div class="outline-text-3" id="text-orgc967899">
+<div id="outline-container-orgf504509" class="outline-3">
+<h3 id="orgf504509">이뇨작용</h3>
+<div class="outline-text-3" id="text-orgf504509">
 <p>
 소변을 마렵게 한다. 사람에 따라 대변 배출(?)도 유도하기 때문에 변비 예방에 도움이 될 수도 있다.
 체내 수분 고갈을 촉진 시킨다는 이야기도 있는데 대체로 오해라고 한다. 몸이 알아서 수분이 부족하면 배출하지 않는다.
 </p>
 </div>
 </div>
-<div id="outline-container-orgc167bd9" class="outline-3">
-<h3 id="orgc167bd9">소화기관 자극</h3>
-<div class="outline-text-3" id="text-orgc167bd9">
+<div id="outline-container-orgf31d341" class="outline-3">
+<h3 id="orgf31d341">소화기관 자극</h3>
+<div class="outline-text-3" id="text-orgf31d341">
 <p>
 특히 위산 분비를 유도하기 때문에 빈 속에 먹으면 속이 쓰릴 수도 있다.
 사람에 따라 배탈을 일으키는 원인일 수도 있다.
 </p>
 </div>
 </div>
-<div id="outline-container-org83e9bad" class="outline-3">
-<h3 id="org83e9bad">심혈관 질환 유발 가능성</h3>
-<div class="outline-text-3" id="text-org83e9bad">
+<div id="outline-container-org6dab973" class="outline-3">
+<h3 id="org6dab973">심혈관 질환 유발 가능성</h3>
+<div class="outline-text-3" id="text-org6dab973">
 <p>
 혈관을 좁게 만든다. 그래서 심혈관 질환을 유발할 가능성도 있다. 다만 의사가 먹지 말라고 하기 전까진 크게 걱정할 수준은 아니다.
 </p>
 </div>
 </div>
-<div id="outline-container-org436524f" class="outline-3">
-<h3 id="org436524f">두통에 효과</h3>
-<div class="outline-text-3" id="text-org436524f">
+<div id="outline-container-org7f69236" class="outline-3">
+<h3 id="org7f69236">두통에 효과</h3>
+<div class="outline-text-3" id="text-org7f69236">
 <p>
 두통을 감소시키는 데 도움을 준다고 한다. 위의 심혈관 질환의 부작용과도 관계가 있는데 이런 양면 효과가 있기도 하다.
 </p>
 </div>
 </div>
-<div id="outline-container-orgeb6248e" class="outline-3">
-<h3 id="orgeb6248e">다이어트</h3>
-<div class="outline-text-3" id="text-orgeb6248e">
+<div id="outline-container-orgb8eee15" class="outline-3">
+<h3 id="orgb8eee15">다이어트</h3>
+<div class="outline-text-3" id="text-orgb8eee15">
 <p>
 신진대사를 촉진 시켜서 지방 연소를 돕는다는 이야기가 있다. 하지만 적게 먹고 많이 움직이는 것이 더 다이어트에 도움이 된다는 것을 명심하자.
 이 외에 운동 능력 향상과 근육통 예방에 도움을 주기도 하기 때문에 과격한 운동 시 카페인 보충제를 섭취하는 경우도 있다.
 </p>
 </div>
 </div>
-<div id="outline-container-org0ffcf1b" class="outline-3">
-<h3 id="org0ffcf1b">칼슘 흡수 방해</h3>
-<div class="outline-text-3" id="text-org0ffcf1b">
+<div id="outline-container-org18854ac" class="outline-3">
+<h3 id="org18854ac">칼슘 흡수 방해</h3>
+<div class="outline-text-3" id="text-org18854ac">
 <p>
 그래서 우유랑 같이 먹으면 뭔가 아깝다고 하는데, 그냥 적당히 따로 칼슘을 보충해 주거나 식후에 바로 커피를 마시지 않으면 크게 문제될 것은 없다고 한다.
 </p>
 </div>
 </div>
-<div id="outline-container-org2a6c679" class="outline-3">
-<h3 id="org2a6c679">중독 증상</h3>
-<div class="outline-text-3" id="text-org2a6c679">
+<div id="outline-container-org45da8a1" class="outline-3">
+<h3 id="org45da8a1">중독 증상</h3>
+<div class="outline-text-3" id="text-org45da8a1">
 <p>
 중독 증상을 일으킬 수 있다. 하지만 딱히 환각 효과도 없고 해서 문제될 건 별로 없다.
 </p>
 </div>
 </div>
-<div id="outline-container-orgf590680" class="outline-3">
-<h3 id="orgf590680">근감소증 예방</h3>
-<div class="outline-text-3" id="text-orgf590680">
+<div id="outline-container-orgc0db3f7" class="outline-3">
+<h3 id="orgc0db3f7">근감소증 예방</h3>
+<div class="outline-text-3" id="text-orgc0db3f7">
 <p>
 근감소증 예방에 도움이 된다고 한다.
 </p>
 </div>
 </div>
-<div id="outline-container-orge1129e1" class="outline-3">
-<h3 id="orge1129e1">발암과 항암 작용</h3>
-<div class="outline-text-3" id="text-orge1129e1">
+<div id="outline-container-org90efc3f" class="outline-3">
+<h3 id="org90efc3f">발암과 항암 작용</h3>
+<div class="outline-text-3" id="text-org90efc3f">
 <p>
 어느 쪽에선 항암 효과가 있고 어떤 쪽에선 암을 유발 시킨다는 연구도 있다.
 이런 상반되는 두 가지 특징이 있는데 사람에 따라 어떤 효과가 나타날 지는 전문가에게 물어보자.
