--- a/note/coffee.html
+++ b/note/coffee.html
@@ -70,20 +70,20 @@
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org0793897">종류</a></li>
-<li><a href="#orgb985278">카페인</a></li>
-<li><a href="#org184a98b">특징</a>
+<li><a href="#org98a2897">종류</a></li>
+<li><a href="#org369fe54">카페인</a></li>
+<li><a href="#org62dc03e">특징</a>
 <ul>
-<li><a href="#org23b9b86">각성 효과</a></li>
-<li><a href="#orgd9d8719">이뇨작용</a></li>
-<li><a href="#orgdd934fd">소화기관 자극</a></li>
-<li><a href="#org4967267">심혈관 질환 유발 가능성</a></li>
-<li><a href="#orgb1da2fd">두통에 효과</a></li>
-<li><a href="#org1366a75">다이어트</a></li>
-<li><a href="#org35dc643">칼슘 흡수 방해</a></li>
-<li><a href="#org30705d9">중독 증상</a></li>
-<li><a href="#org11a235b">근감소증 예방</a></li>
-<li><a href="#org152887b">발암과 항암 작용</a></li>
+<li><a href="#orgfd284f5">각성 효과</a></li>
+<li><a href="#orgf108c6c">이뇨작용</a></li>
+<li><a href="#org360a347">소화기관 자극</a></li>
+<li><a href="#org2535209">심혈관 질환 유발 가능성</a></li>
+<li><a href="#org7b20b9a">두통에 효과</a></li>
+<li><a href="#orgbf554d1">다이어트</a></li>
+<li><a href="#org6936acf">칼슘 흡수 방해</a></li>
+<li><a href="#orgf32b7fd">중독 증상</a></li>
+<li><a href="#orgc28306c">근감소증 예방</a></li>
+<li><a href="#org09332ff">발암과 항암 작용</a></li>
 </ul>
 </li>
 </ul>
@@ -96,110 +96,110 @@
 어차피 커피는 향을 즐기는 음료라 맛 자체는 크게 중요하지 않을지도 모른다.
 </p>
 
-<div id="outline-container-org0793897" class="outline-2">
-<h2 id="org0793897">종류</h2>
-<div class="outline-text-2" id="text-org0793897">
+<div id="outline-container-org98a2897" class="outline-2">
+<h2 id="org98a2897">종류</h2>
+<div class="outline-text-2" id="text-org98a2897">
 <p>
 이 세상에는 카페라떼와 듣보잡 커피라는 두 가지 선택지만 존재한다.
 물론 글쓴이가 카페라떼 성애자라 다른 커피 따윈(?) 눈에 들어오지 않아서 이렇게 적는 것 뿐이다.
 </p>
 </div>
 </div>
-<div id="outline-container-orgb985278" class="outline-2">
-<h2 id="orgb985278">카페인</h2>
-<div class="outline-text-2" id="text-orgb985278">
+<div id="outline-container-org369fe54" class="outline-2">
+<h2 id="org369fe54">카페인</h2>
+<div class="outline-text-2" id="text-org369fe54">
 <p>
 카페인(caffeine)은 커피의 주요 성분이다. 원래는 '독'으로 커피 나무가 해충으로 부터 자신을 보호하기 위해 축적하는 살충제다.
 다행히도 인간에게는 주로 각성 효과를 나타내며 '독' 이라는 분류의 의미가 거의 없는 편이다.
 </p>
 </div>
 </div>
-<div id="outline-container-org184a98b" class="outline-2">
-<h2 id="org184a98b">특징</h2>
-<div class="outline-text-2" id="text-org184a98b">
+<div id="outline-container-org62dc03e" class="outline-2">
+<h2 id="org62dc03e">특징</h2>
+<div class="outline-text-2" id="text-org62dc03e">
 <p>
 커피의 전반적인 효능이나 특징은 대부분 카페인에 의한 것으로 알려져 있다.
-이 글에서는 대충 뭉뚱그려서 어느 정도 검증된 내용만 정리해본다.
+이 글에서는 대충 뭉뚱그려서 어느 정도 검증되었거나 기사화 된 내용만 정리해본다.
 </p>
 </div>
-<div id="outline-container-org23b9b86" class="outline-3">
-<h3 id="org23b9b86">각성 효과</h3>
-<div class="outline-text-3" id="text-org23b9b86">
+<div id="outline-container-orgfd284f5" class="outline-3">
+<h3 id="orgfd284f5">각성 효과</h3>
+<div class="outline-text-3" id="text-orgfd284f5">
 <p>
 중추신경을 흥분시켜서 잠이 잘 안 오게 하고 정도에 따라 집중력도 높여 준다고 알려져있다.
 </p>
 </div>
 </div>
-<div id="outline-container-orgd9d8719" class="outline-3">
-<h3 id="orgd9d8719">이뇨작용</h3>
-<div class="outline-text-3" id="text-orgd9d8719">
+<div id="outline-container-orgf108c6c" class="outline-3">
+<h3 id="orgf108c6c">이뇨작용</h3>
+<div class="outline-text-3" id="text-orgf108c6c">
 <p>
 소변을 마렵게 한다. 사람에 따라 대변 배출(?)도 유도하기 때문에 변비 예방에 도움이 될 수도 있다.
 체내 수분 고갈을 촉진 시킨다는 이야기도 있는데 대체로 오해라고 한다. 몸이 알아서 수분이 부족하면 배출하지 않는다.
 </p>
 </div>
 </div>
-<div id="outline-container-orgdd934fd" class="outline-3">
-<h3 id="orgdd934fd">소화기관 자극</h3>
-<div class="outline-text-3" id="text-orgdd934fd">
+<div id="outline-container-org360a347" class="outline-3">
+<h3 id="org360a347">소화기관 자극</h3>
+<div class="outline-text-3" id="text-org360a347">
 <p>
 특히 위산 분비를 유도하기 때문에 빈 속에 먹으면 속이 쓰릴 수도 있다.
 사람에 따라 배탈을 일으키는 원인일 수도 있다.
 </p>
 </div>
 </div>
-<div id="outline-container-org4967267" class="outline-3">
-<h3 id="org4967267">심혈관 질환 유발 가능성</h3>
-<div class="outline-text-3" id="text-org4967267">
+<div id="outline-container-org2535209" class="outline-3">
+<h3 id="org2535209">심혈관 질환 유발 가능성</h3>
+<div class="outline-text-3" id="text-org2535209">
 <p>
 혈관을 좁게 만든다. 그래서 심혈관 질환을 유발할 가능성도 있다. 다만 의사가 먹지 말라고 하기 전까진 크게 걱정할 수준은 아니다.
 </p>
 </div>
 </div>
-<div id="outline-container-orgb1da2fd" class="outline-3">
-<h3 id="orgb1da2fd">두통에 효과</h3>
-<div class="outline-text-3" id="text-orgb1da2fd">
+<div id="outline-container-org7b20b9a" class="outline-3">
+<h3 id="org7b20b9a">두통에 효과</h3>
+<div class="outline-text-3" id="text-org7b20b9a">
 <p>
 두통을 감소시키는 데 도움을 준다고 한다. 위의 심혈관 질환의 부작용과도 관계가 있는데 이런 양면 효과가 있기도 하다.
 </p>
 </div>
 </div>
-<div id="outline-container-org1366a75" class="outline-3">
-<h3 id="org1366a75">다이어트</h3>
-<div class="outline-text-3" id="text-org1366a75">
+<div id="outline-container-orgbf554d1" class="outline-3">
+<h3 id="orgbf554d1">다이어트</h3>
+<div class="outline-text-3" id="text-orgbf554d1">
 <p>
 신진대사를 촉진 시켜서 지방 연소를 돕는다는 이야기가 있다. 하지만 적게 먹고 많이 움직이는 것이 더 다이어트에 도움이 된다는 것을 명심하자.
 이 외에 운동 능력 향상과 근육통 예방에 도움을 주기도 하기 때문에 과격한 운동 시 카페인 보충제를 섭취하는 경우도 있다.
 </p>
 </div>
 </div>
-<div id="outline-container-org35dc643" class="outline-3">
-<h3 id="org35dc643">칼슘 흡수 방해</h3>
-<div class="outline-text-3" id="text-org35dc643">
+<div id="outline-container-org6936acf" class="outline-3">
+<h3 id="org6936acf">칼슘 흡수 방해</h3>
+<div class="outline-text-3" id="text-org6936acf">
 <p>
 그래서 우유랑 같이 먹으면 뭔가 아깝다고 하는데, 그냥 적당히 따로 칼슘을 보충해 주거나 식후에 바로 커피를 마시지 않으면 크게 문제될 것은 없다고 한다.
 </p>
 </div>
 </div>
-<div id="outline-container-org30705d9" class="outline-3">
-<h3 id="org30705d9">중독 증상</h3>
-<div class="outline-text-3" id="text-org30705d9">
+<div id="outline-container-orgf32b7fd" class="outline-3">
+<h3 id="orgf32b7fd">중독 증상</h3>
+<div class="outline-text-3" id="text-orgf32b7fd">
 <p>
 중독 증상을 일으킬 수 있다. 하지만 딱히 환각 효과도 없고 해서 문제될 건 별로 없다.
 </p>
 </div>
 </div>
-<div id="outline-container-org11a235b" class="outline-3">
-<h3 id="org11a235b">근감소증 예방</h3>
-<div class="outline-text-3" id="text-org11a235b">
+<div id="outline-container-orgc28306c" class="outline-3">
+<h3 id="orgc28306c">근감소증 예방</h3>
+<div class="outline-text-3" id="text-orgc28306c">
 <p>
 근감소증 예방에 도움이 된다고 한다.
 </p>
 </div>
 </div>
-<div id="outline-container-org152887b" class="outline-3">
-<h3 id="org152887b">발암과 항암 작용</h3>
-<div class="outline-text-3" id="text-org152887b">
+<div id="outline-container-org09332ff" class="outline-3">
+<h3 id="org09332ff">발암과 항암 작용</h3>
+<div class="outline-text-3" id="text-org09332ff">
 <p>
 어느 쪽에선 항암 효과가 있고 어떤 쪽에선 암을 유발 시킨다는 연구도 있다.
 이런 상반되는 두 가지 특징이 있는데 사람에 따라 어떤 효과가 나타날 지는 전문가에게 물어보자.
