update with 6 changes

--- a/note/cafe-latte.html
+++ b/note/cafe-latte.html
@@ -4,14 +4,14 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <link rel="stylesheet" href="/static/style.css" />
-<title>Seorenn - Seorenn</title>
-<meta name="twitter:title" content="Seorenn" />
-<meta name="og:title" content="Seorenn" />
-<meta name="description" content="Seorenn의 개인정보가 듬뿍 담겼을 리가 없는 페이지" />
-<meta name="twitter:description" content="Seorenn의 개인정보가 듬뿍 담겼을 리가 없는 페이지" />
-<meta name="og:description" content="Seorenn의 개인정보가 듬뿍 담겼을 리가 없는 페이지" />
-<link rel="canonical" href="https://seorenn.github.io/note/seorenn.html" />
-<meta property="og:url" content="https://seorenn.github.io/note/seorenn.html" />
+<title>카페라떼 - Seorenn</title>
+<meta name="twitter:title" content="카페라떼" />
+<meta name="og:title" content="카페라떼" />
+<meta name="description" content="카페라떼(Cafe Latte)라는 커피 종류에 대한 글" />
+<meta name="twitter:description" content="카페라떼(Cafe Latte)라는 커피 종류에 대한 글" />
+<meta name="og:description" content="카페라떼(Cafe Latte)라는 커피 종류에 대한 글" />
+<link rel="canonical" href="https://seorenn.github.io/note/cafe-latte.html" />
+<meta property="og:url" content="https://seorenn.github.io/note/cafe-latte.html" />
 <link rel="alternate" type="application/rss+xml" title="Seorenn Note Feeds" href="/rss.xml"/>
 <link rel="shortcut icon" type="image/x-icon" href="/static/favicon.ico" />
 <meta name="twitter:image"content="https://seorenn.github.io/static/seorenn-symbol.png" />
@@ -64,48 +64,63 @@
 </div>
 <section class="content">
 <header>
-<h1>Seorenn</h1>
-<div class="title-date">2020년 5월 1일 수정</div>
+<h1>카페라떼</h1>
+<div class="title-date">2020년 5월 8일 수정</div>
 </header>
-<p>
-Seorenn(세오렌)은 우리은하 태양계 지구 대한민국에 사는 사람이다.
-주로 잡다한 종류의 소프트웨어 개발로 먹고 사는 것으로 알려져 있다.
-</p>
-
-<p>
-주로 <a href="macos.html">macOS</a>에서 <a href="emacs.html">Emacs</a>를 활용해
-작업하는 것을 즐기는 편이다.
-참고로 <a href="emacs.html">Emacs</a> 설정은
-과거에는 <a href="spacemacs.html">Spacemacs</a>를 사용하다
-지금은 <a href="doom-emacs.html">Doom Emacs</a>를 즐겨 사용한다.
-</p>
-
-<p>
-프로그래밍 언어는
-<a href="swift.html">Swift</a>, <a href="python.html">Python</a>을 좋아하는 것 같다.
-Java와 C++은 아주 혐오하는 것 같다.
-</p>
-
-<p>
-들여쓰기는 스페이스 4칸을 선호한다. 탭을 쓰면 화낸다.
-</p>
-
-<p>
-기타 고전 건축이나 기둥, 아치에 흥분하는 변태 같다.
-</p>
-
-<div id="outline-container-orgdd0be90" class="outline-2">
-<h2 id="orgdd0be90">외부 링크</h2>
-<div class="outline-text-2" id="text-orgdd0be90">
-<ul class="org-ul">
-<li><a target="_blank" href="https://github.com/seorenn">🌏GitHub</a></li>
-<li><a target="_blank" href="https://twitter.com/seorenn">🌏Twitter</a></li>
-<li><a target="_blank" href="https://youtube.com/c/seorenn">🌏Youtube Channel</a></li>
-<li><a target="_blank" href="https://seorenn.tistory.com">🌏Blog</a></li>
-<li><a target="_blank" href="https://healthyrenn.tistory.com">🌏Blog (2)</a></li>
-<li><a target="_blank" href="https://seorenn.blogspot.com">🌏Blog (3)</a> (업데이트 안 함)</li>
-<li><a target="_blank" href="https://rennflav.blogspot.com">🌏Blog (4)</a> (업데이트 안 함)</li>
+<div id="table-of-contents">
+<h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
+<ul>
+<li><a href="#org875b1ea">Cafe Latte</a></li>
+<li><a href="#orga07afda">카페라떼(매일유업)</a></li>
 </ul>
+</div>
+</div>
+
+<div id="outline-container-org875b1ea" class="outline-2">
+<h2 id="org875b1ea">Cafe Latte</h2>
+<div class="outline-text-2" id="text-org875b1ea">
+<p>
+카페라떼(혹은 카페라테)는 이탈리아어의 커피(cafe)와 우유(latte)의 합성어로,
+이탈리아에서 유래한 <a href="coffee.html">커피</a>를 즐기는 다양한 방법 중 하나이다.
+정석 카페라떼는 뜨거운 에스프레소를 내린 후
+여기에 역시 뜨겁게 대운 우유를 부어서 만드는 매우 간단한 커피다.
+</p>
+
+<p>
+우유를 붓는 방법에서 커피 잔에 다양한 그림을 그릴 수 있는 라떼 아트 라는 특수한 예술 장르(?)도 있다.
+</p>
+
+<p>
+비슷한 레시피로 카페오레나 카푸치노가 있다. 물론 재료만 비슷할 뿐이지만&#x2026;
+</p>
+
+<p>
+<a href="seorenn.html">Seorenn</a>이 가장 좋아하는 커피 종류다.
+</p>
+</div>
+</div>
+<div id="outline-container-orga07afda" class="outline-2">
+<h2 id="orga07afda">카페라떼(매일유업)</h2>
+<div class="outline-text-2" id="text-orga07afda">
+<p>
+오리지널 카페라떼와 비슷하게 커피와 우유를 조합한 음료로 차갑게 해서 판매하는 음료다.
+매일유업에서 제조한다.
+</p>
+
+<p>
+특히 마일드(Mild)는 <a href="seorenn.html">Seorenn</a>이 과거에 정말 좋아하던 커피다.
+다만 요즘은 오리지널에 밀려서 잘 안 마신다.
+</p>
+
+<p>
+일반 마트에서 쉽게 구할 수 있는 커피 중에서는 그나마 덜 단 편이지만
+시럽을 넣지 않은 오리지널 카페라떼를 자주 마시는 사람에게는 역시 단 편이다.
+근데 이상하게 설탕을 더 줄인 하프슈가는 왠지 맛이 없어서 잘 안 먹게 된다.
+</p>
+
+<p>
+도데체 왜 이런 이야기를 적는지 모르겠다. 아마도 적을 게 없어서 그러나 보다.
+</p>
 </div>
 </div>
 <div class="mid-ad-container">
@@ -123,7 +138,7 @@ Java와 C++은 아주 혐오하는 것 같다.
 <hr /><h1>이 글을 링크하는 글들</h1>
 <div class="article-link">
 <div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/cafe-latte.html">카페라떼</a></h2>
+<h2><a class="article-link-title" href="/note/coffee.html">커피</a></h2>
 <div class="article-link-date">
 2020년 5월 8일 수정</div>
 </div>
