--- a/note/coffee.html
+++ b/note/coffee.html
@@ -70,20 +70,20 @@
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org98a2897">종류</a></li>
-<li><a href="#org369fe54">카페인</a></li>
-<li><a href="#org62dc03e">특징</a>
+<li><a href="#org426de7c">종류</a></li>
+<li><a href="#org0704ab9">카페인</a></li>
+<li><a href="#orgdc2c755">특징</a>
 <ul>
-<li><a href="#orgfd284f5">각성 효과</a></li>
-<li><a href="#orgf108c6c">이뇨작용</a></li>
-<li><a href="#org360a347">소화기관 자극</a></li>
-<li><a href="#org2535209">심혈관 질환 유발 가능성</a></li>
-<li><a href="#org7b20b9a">두통에 효과</a></li>
-<li><a href="#orgbf554d1">다이어트</a></li>
-<li><a href="#org6936acf">칼슘 흡수 방해</a></li>
-<li><a href="#orgf32b7fd">중독 증상</a></li>
-<li><a href="#orgc28306c">근감소증 예방</a></li>
-<li><a href="#org09332ff">발암과 항암 작용</a></li>
+<li><a href="#orgd8207e7">각성 효과</a></li>
+<li><a href="#org0917110">이뇨작용</a></li>
+<li><a href="#org7c24664">소화기관 자극</a></li>
+<li><a href="#org368fb5a">심혈관 질환 유발 가능성</a></li>
+<li><a href="#orgfaf1591">두통에 효과</a></li>
+<li><a href="#org3968ae5">다이어트</a></li>
+<li><a href="#orga67af03">칼슘 흡수 방해</a></li>
+<li><a href="#orgffa167e">중독 증상</a></li>
+<li><a href="#org491f8b1">근감소증 예방</a></li>
+<li><a href="#org85a5883">발암과 항암 작용</a></li>
 </ul>
 </li>
 </ul>
@@ -96,110 +96,110 @@
 어차피 커피는 향을 즐기는 음료라 맛 자체는 크게 중요하지 않을지도 모른다.
 </p>
 
-<div id="outline-container-org98a2897" class="outline-2">
-<h2 id="org98a2897">종류</h2>
-<div class="outline-text-2" id="text-org98a2897">
+<div id="outline-container-org426de7c" class="outline-2">
+<h2 id="org426de7c">종류</h2>
+<div class="outline-text-2" id="text-org426de7c">
 <p>
-이 세상에는 카페라떼와 듣보잡 커피라는 두 가지 선택지만 존재한다.
-물론 글쓴이가 카페라떼 성애자라 다른 커피 따윈(?) 눈에 들어오지 않아서 이렇게 적는 것 뿐이다.
+이 세상에는 <a href="cafe-latte.html">카페라떼</a>와 듣보잡 커피라는 두 가지 선택지만 존재한다.
+물론 글쓴이가 <a href="cafe-latte.html">카페라떼</a> 성애자라 다른 커피 따윈(?) 눈에 들어오지 않아서 이렇게 적는 것 뿐이다.
 </p>
 </div>
 </div>
-<div id="outline-container-org369fe54" class="outline-2">
-<h2 id="org369fe54">카페인</h2>
-<div class="outline-text-2" id="text-org369fe54">
+<div id="outline-container-org0704ab9" class="outline-2">
+<h2 id="org0704ab9">카페인</h2>
+<div class="outline-text-2" id="text-org0704ab9">
 <p>
 카페인(caffeine)은 커피의 주요 성분이다. 원래는 '독'으로 커피 나무가 해충으로 부터 자신을 보호하기 위해 축적하는 살충제다.
 다행히도 인간에게는 주로 각성 효과를 나타내며 '독' 이라는 분류의 의미가 거의 없는 편이다.
 </p>
 </div>
 </div>
-<div id="outline-container-org62dc03e" class="outline-2">
-<h2 id="org62dc03e">특징</h2>
-<div class="outline-text-2" id="text-org62dc03e">
+<div id="outline-container-orgdc2c755" class="outline-2">
+<h2 id="orgdc2c755">특징</h2>
+<div class="outline-text-2" id="text-orgdc2c755">
 <p>
 커피의 전반적인 효능이나 특징은 대부분 카페인에 의한 것으로 알려져 있다.
 이 글에서는 대충 뭉뚱그려서 어느 정도 검증되었거나 기사화 된 내용만 정리해본다.
 </p>
 </div>
-<div id="outline-container-orgfd284f5" class="outline-3">
-<h3 id="orgfd284f5">각성 효과</h3>
-<div class="outline-text-3" id="text-orgfd284f5">
+<div id="outline-container-orgd8207e7" class="outline-3">
+<h3 id="orgd8207e7">각성 효과</h3>
+<div class="outline-text-3" id="text-orgd8207e7">
 <p>
 중추신경을 흥분시켜서 잠이 잘 안 오게 하고 정도에 따라 집중력도 높여 준다고 알려져있다.
 </p>
 </div>
 </div>
-<div id="outline-container-orgf108c6c" class="outline-3">
-<h3 id="orgf108c6c">이뇨작용</h3>
-<div class="outline-text-3" id="text-orgf108c6c">
+<div id="outline-container-org0917110" class="outline-3">
+<h3 id="org0917110">이뇨작용</h3>
+<div class="outline-text-3" id="text-org0917110">
 <p>
 소변을 마렵게 한다. 사람에 따라 대변 배출(?)도 유도하기 때문에 변비 예방에 도움이 될 수도 있다.
 체내 수분 고갈을 촉진 시킨다는 이야기도 있는데 대체로 오해라고 한다. 몸이 알아서 수분이 부족하면 배출하지 않는다.
 </p>
 </div>
 </div>
-<div id="outline-container-org360a347" class="outline-3">
-<h3 id="org360a347">소화기관 자극</h3>
-<div class="outline-text-3" id="text-org360a347">
+<div id="outline-container-org7c24664" class="outline-3">
+<h3 id="org7c24664">소화기관 자극</h3>
+<div class="outline-text-3" id="text-org7c24664">
 <p>
 특히 위산 분비를 유도하기 때문에 빈 속에 먹으면 속이 쓰릴 수도 있다.
 사람에 따라 배탈을 일으키는 원인일 수도 있다.
 </p>
 </div>
 </div>
-<div id="outline-container-org2535209" class="outline-3">
-<h3 id="org2535209">심혈관 질환 유발 가능성</h3>
-<div class="outline-text-3" id="text-org2535209">
+<div id="outline-container-org368fb5a" class="outline-3">
+<h3 id="org368fb5a">심혈관 질환 유발 가능성</h3>
+<div class="outline-text-3" id="text-org368fb5a">
 <p>
 혈관을 좁게 만든다. 그래서 심혈관 질환을 유발할 가능성도 있다. 다만 의사가 먹지 말라고 하기 전까진 크게 걱정할 수준은 아니다.
 </p>
 </div>
 </div>
-<div id="outline-container-org7b20b9a" class="outline-3">
-<h3 id="org7b20b9a">두통에 효과</h3>
-<div class="outline-text-3" id="text-org7b20b9a">
+<div id="outline-container-orgfaf1591" class="outline-3">
+<h3 id="orgfaf1591">두통에 효과</h3>
+<div class="outline-text-3" id="text-orgfaf1591">
 <p>
 두통을 감소시키는 데 도움을 준다고 한다. 위의 심혈관 질환의 부작용과도 관계가 있는데 이런 양면 효과가 있기도 하다.
 </p>
 </div>
 </div>
-<div id="outline-container-orgbf554d1" class="outline-3">
-<h3 id="orgbf554d1">다이어트</h3>
-<div class="outline-text-3" id="text-orgbf554d1">
+<div id="outline-container-org3968ae5" class="outline-3">
+<h3 id="org3968ae5">다이어트</h3>
+<div class="outline-text-3" id="text-org3968ae5">
 <p>
 신진대사를 촉진 시켜서 지방 연소를 돕는다는 이야기가 있다. 하지만 적게 먹고 많이 움직이는 것이 더 다이어트에 도움이 된다는 것을 명심하자.
 이 외에 운동 능력 향상과 근육통 예방에 도움을 주기도 하기 때문에 과격한 운동 시 카페인 보충제를 섭취하는 경우도 있다.
 </p>
 </div>
 </div>
-<div id="outline-container-org6936acf" class="outline-3">
-<h3 id="org6936acf">칼슘 흡수 방해</h3>
-<div class="outline-text-3" id="text-org6936acf">
+<div id="outline-container-orga67af03" class="outline-3">
+<h3 id="orga67af03">칼슘 흡수 방해</h3>
+<div class="outline-text-3" id="text-orga67af03">
 <p>
 그래서 우유랑 같이 먹으면 뭔가 아깝다고 하는데, 그냥 적당히 따로 칼슘을 보충해 주거나 식후에 바로 커피를 마시지 않으면 크게 문제될 것은 없다고 한다.
 </p>
 </div>
 </div>
-<div id="outline-container-orgf32b7fd" class="outline-3">
-<h3 id="orgf32b7fd">중독 증상</h3>
-<div class="outline-text-3" id="text-orgf32b7fd">
+<div id="outline-container-orgffa167e" class="outline-3">
+<h3 id="orgffa167e">중독 증상</h3>
+<div class="outline-text-3" id="text-orgffa167e">
 <p>
 중독 증상을 일으킬 수 있다. 하지만 딱히 환각 효과도 없고 해서 문제될 건 별로 없다.
 </p>
 </div>
 </div>
-<div id="outline-container-orgc28306c" class="outline-3">
-<h3 id="orgc28306c">근감소증 예방</h3>
-<div class="outline-text-3" id="text-orgc28306c">
+<div id="outline-container-org491f8b1" class="outline-3">
+<h3 id="org491f8b1">근감소증 예방</h3>
+<div class="outline-text-3" id="text-org491f8b1">
 <p>
 근감소증 예방에 도움이 된다고 한다.
 </p>
 </div>
 </div>
-<div id="outline-container-org09332ff" class="outline-3">
-<h3 id="org09332ff">발암과 항암 작용</h3>
-<div class="outline-text-3" id="text-org09332ff">
+<div id="outline-container-org85a5883" class="outline-3">
+<h3 id="org85a5883">발암과 항암 작용</h3>
+<div class="outline-text-3" id="text-org85a5883">
 <p>
 어느 쪽에선 항암 효과가 있고 어떤 쪽에선 암을 유발 시킨다는 연구도 있다.
 이런 상반되는 두 가지 특징이 있는데 사람에 따라 어떤 효과가 나타날 지는 전문가에게 물어보자.
@@ -219,6 +219,16 @@
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
+</div>
+<div class="backlinks-container">
+<hr /><h1>이 글을 링크하는 글들</h1>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/cafe-latte.html">카페라떼</a></h2>
+<div class="article-link-date">
+2020년 5월 8일 수정</div>
+</div>
+</div>
 </div>
 </section>
 <div class="side-ad-container">
