update with 2 changes

--- a/note/cafe-latte.html
+++ b/note/cafe-latte.html
@@ -70,24 +70,24 @@
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org875b1ea">Cafe Latte</a></li>
-<li><a href="#orga07afda">카페라떼(매일유업)</a></li>
+<li><a href="#org6c90a28">Cafe Latte</a></li>
+<li><a href="#orgccaafed">카페라떼(매일유업)</a></li>
 </ul>
 </div>
 </div>
 
-<div id="outline-container-org875b1ea" class="outline-2">
-<h2 id="org875b1ea">Cafe Latte</h2>
-<div class="outline-text-2" id="text-org875b1ea">
+<div id="outline-container-org6c90a28" class="outline-2">
+<h2 id="org6c90a28">Cafe Latte</h2>
+<div class="outline-text-2" id="text-org6c90a28">
 <p>
 카페라떼(혹은 카페라테)는 이탈리아어의 커피(cafe)와 우유(latte)의 합성어로,
 이탈리아에서 유래한 <a href="coffee.html">커피</a>를 즐기는 다양한 방법 중 하나이다.
 정석 카페라떼는 뜨거운 에스프레소를 내린 후
-여기에 역시 뜨겁게 대운 우유를 부어서 만드는 매우 간단한 커피다.
+여기에 역시 뜨거운 우유를 부어서 만드는 매우 간단한 커피다.
 </p>
 
 <p>
-우유를 붓는 방법에서 커피 잔에 다양한 그림을 그릴 수 있는 라떼 아트 라는 특수한 예술 장르(?)도 있다.
+우유를 붓는 방법에서 커피 잔에 다양한 그림을 그리는 라떼 아트 라는 특수한 예술 장르(?)도 있다.
 </p>
 
 <p>
@@ -99,9 +99,9 @@
 </p>
 </div>
 </div>
-<div id="outline-container-orga07afda" class="outline-2">
-<h2 id="orga07afda">카페라떼(매일유업)</h2>
-<div class="outline-text-2" id="text-orga07afda">
+<div id="outline-container-orgccaafed" class="outline-2">
+<h2 id="orgccaafed">카페라떼(매일유업)</h2>
+<div class="outline-text-2" id="text-orgccaafed">
 <p>
 오리지널 카페라떼와 비슷하게 커피와 우유를 조합한 음료로 차갑게 해서 판매하는 음료다.
 매일유업에서 제조한다.
