--- a/index.html
+++ b/index.html
@@ -140,6 +140,13 @@
 <h1>❏ NOTE에서 최근 업데이트된 글</h1>
 <div class="article-link">
 <div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/mongodb.html">MongoDB</a></h2>
+<div class="article-link-date">
+2020년 5월 8일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/cafe-latte.html">카페라떼</a></h2>
 <div class="article-link-date">
 2020년 5월 8일 수정</div>
@@ -199,13 +206,6 @@
 <h2><a class="article-link-title" href="/note/doom-emacs.html">Doom Emacs</a></h2>
 <div class="article-link-date">
 2020년 5월 3일 수정</div>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/emacs-lisp.html">Emacs Lisp</a></h2>
-<div class="article-link-date">
-2020년 5월 1일 수정</div>
 </div>
 </div>
 </div>
